# rspack-plugin-vue3

./: Cargo.toml
src/: lib.rs
src/compiler/: ast.rs  code_gen.rs  error.rs  input.rs  mod.rs  options.rs  parse.rs  patch_flags.rs  utils.rs
src/compiler/transform/: mod.rs  swc_utils.rs  transform_element.rs  transform_expression.rs  transform_slot_outlet.rs  transform_text.rs  transform_v_bind.rs  transform_v_for.rs  transform_v_if.rs  transform_v_model.rs  transform_v_solt.rs
tests/transforms/: mod.rs  test_transform.rs
tests/transforms/fixtures/: a.js
